feat(auth+appointments): add OTP login and email notifications
- Replace standard login with OTP-based authentication flow
- Send OTP to user's registered email for verification
- Add OTP input screen with validation and submission
- Send appointment confirmation details to patient via email on booking